testdata/baselines/reference/compiler/jsDeclarationExportDefaultAssignmentCrash.errors.txt
jsDeclarationExportDefaultAssignmentCrash(1,11): error TS1128: Declaration or statement expected.
jsDeclarationExportDefaultAssignmentCrash(1,11): error TS1003: Identifier expected.
jsDeclarationExportDefaultAssignmentCrash(1,11): error TS1005: ';' expected.

==== jsDeclarationExportDefaultAssignmentCrash (3 errors) ====
    
index.js(2,9): error TS1128: Declaration or statement expected.
index.js(2,9): error TS1003: Identifier expected.
index.js(2,9): error TS1005: ';' expected.

==== index.js (3 errors) ====
    
    exports.default = () => {
            ~~~~~~~
!!! error TS1128: Declaration or statement expected.
            ~~~~~~~
!!! error TS1003: Identifier expected.
            ~~~~~~~
!!! error TS1005: ';' expected.
        return 1234;
    }
    
